--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.2.0"
+    "@faker-js/faker": "^8.2.0",
+    "nodemon": "^3.0.1"
   },
   "description": ""
 }
